--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
     </description>
     <url>https://github.com/IQSS/UNF</url>
     
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
     <scm>
         <connection>scm:git:git@github.com:IQSS/UNF.git</connection>
         <developerConnection>scm:git:git@github.com:IQSS/UNF.git</developerConnection>
