build: try to release a JDK8 compatible version of the library #5

--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -3,6 +3,13 @@ on:
     push:
         tags:
             - '*'
+
+env:
+    # Some forks are using older Java versions, so we need to maintain backward compatibility
+    # or people's builds break, as the Maven Central version takes priority over local_lib
+    # (not present anymore as of DV 6.0, but relevant for prior versions!). Result: hard code to Java 8.
+    TARGET_JAVA_VERSION: 8
+
 jobs:
     publish:
         runs-on: ubuntu-latest
@@ -21,7 +28,7 @@ jobs:
                   restore-keys: ${{ runner.os }}-m2
 
             - name: Build, test, verify
-              run: mvn -B verify
+              run: mvn -B verify -Djdk.version=${{ env.TARGET_JAVA_VERSION }}
             - name: Check POM metadata for release
               run: mvn pomchecker:check-maven-central
 
@@ -37,7 +44,7 @@ jobs:
                   gpg-private-key: ${{ secrets.DATAVERSEBOT_GPG_KEY }}
                   gpg-passphrase: MAVEN_GPG_PASSPHRASE
             - name: Sign + Publish release
-              run: mvn -Prelease deploy -DskipAnalysis -DskipUT -DskipIT
+              run: mvn -Prelease deploy -DskipAnalysis -DskipUT -DskipIT -Djdk.version=${{ env.TARGET_JAVA_VERSION }}
               env:
                   MAVEN_USERNAME: ${{ secrets.DATAVERSEBOT_SONATYPE_USERNAME }}
                   MAVEN_PASSWORD: ${{ secrets.DATAVERSEBOT_SONATYPE_TOKEN }}
