--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.dataverse</groupId>
     <artifactId>unf</artifactId>
-    <version>6.0.1</version>
+    <version>6.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Universal Numerical Fingerprint</name>
@@ -26,7 +26,7 @@
         <connection>scm:git:git@github.com:IQSS/UNF.git</connection>
         <developerConnection>scm:git:git@github.com:IQSS/UNF.git</developerConnection>
         <url>git@github.com:IQSS/UNF.git</url>
-        <tag>unf-6.0.1</tag>
+        <tag>HEAD</tag>
     </scm>
     <ciManagement>
         <url>https://github.com/IQSS/UNF/actions</url>
